--- a/Views/Store/Details.cshtml
+++ b/Views/Store/Details.cshtml
@@ -6,63 +6,28 @@
 
 <h1>Details</h1>
 
-<div class="row">
-    <div class="col-5">
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-5">
+            <img src="@Model.ImageUrl" alt="@Model.Title" class="img-fluid">
+        </div>
+        <div class="col-md-7">
+            <h1>@Model.Title</h1>
+            <p class="text-muted">by @Model.Author</p>
 
-        <div>
-            <h4>Book</h4>
-            <hr />
-            <dl class="row">
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.Title)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.Title)
-                </dd>
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.Author)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.Author)
-                </dd>
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.Language)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.Language)
-                </dd>
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.ISBN)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.ISBN)
-                </dd>
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.DatePublished)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.DatePublished)
-                </dd>
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.Price)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.Price)
-                </dd>
-                <dt class="col-sm-3">
-                    @Html.DisplayNameFor(model => model.Description)
-                </dt>
-                <dd class="col-sm-9">
-                    @Html.DisplayFor(model => model.Description)
-                </dd>
-            </dl>
+            <div class="book-details">
+                <p><strong>ISBN:</strong> @Model.ISBN</p>
+                <p><strong>Language:</strong> @Model.Language</p>
+                <p><strong>Published:</strong> @Model.DatePublished.ToShortDateString()</p>
+                <p><strong>Price:</strong> @Model.Price.ToString("C")</p>
+            </div>
+
+            <p class="mt-3">@Model.Description</p>
+
+            <div class="mt-4">
+                <a asp-action="Index" class="btn btn-secondary"><i class="fa-solid fa-arrow-left"></i> Back</a>
+                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-primary store-btn float-right ml-2">Add to Cart <i class="fa-solid fa-cart-plus"></i></a>
+            </div>
         </div>
-        <div>
-            <a asp-action="Index" class="btn btn-warning"><i class="fa-solid fa-arrow-left"></i> Back</a>
-            <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-primary store-btn float-right mr-5">Add to cart <i class="fa-solid fa-cart-plus"></i></a>
-        </div>
-    </div>
-    <div class="col-4">
-        <img src="@Model.ImageUrl" class="w-100" />
     </div>
 </div>
