--- a/Views/Admin/EditRole.cshtml
+++ b/Views/Admin/EditRole.cshtml
@@ -18,6 +18,7 @@
             <span asp-validation-for="RoleName" class="text-danger"></span>
         </div>
 
+        @*<div asp-validation-summary="All" class="text-danger"></div>*@
 
         <div class="form-group">
             <a asp-action="ListAllRoles" class="btn btn-warning"><i class="fa-solid fa-angles-left"></i> Back</a>
