--- a/Views/Store/Details.cshtml
+++ b/Views/Store/Details.cshtml
@@ -26,7 +26,8 @@
 
             <div class="mt-4">
                 <a asp-action="Index" class="btn btn-secondary"><i class="fa-solid fa-arrow-left"></i> Back</a>
-                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-primary store-btn float-right ml-2">Add to Cart <i class="fa-solid fa-cart-plus"></i></a>
+                <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.Id" 
+                class="btn btn-primary store-btn float-right ml-2">Add to Cart <i class="fa-solid fa-cart-plus"></i></a>
             </div>
         </div>
     </div>
