--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -14,7 +14,8 @@
             <input type="text" name="searchString" placeholder="Title or Author" class="form-control-sm col-12" />
         </div>
         <div class="my-1">
-            <input type="number" name="minPrice" step="1" placeholder="$min" class="form-control-sm col-5" />&nbsp;&#8212;&nbsp;<input type="number" name="maxPrice" step="1" placeholder="$max" class="form-control-sm col-5" />
+            <input type="number" name="minPrice" step="1" placeholder="$min" 
+            class="form-control-sm col-5" />&nbsp;&#8212;&nbsp;<input type="number" name="maxPrice" step="1" placeholder="$max" class="form-control-sm col-5" />
         </div>
         <input type="submit" value="Filter" class="btn btn-primary btn-sm" />
         <a asp-action="Index" class="btn btn-secondary btn-sm float-right">Clear</a>
